# la-friedberg

./: .gitignore  CMakeLists.txt  Doxyfile
exercises/: CMakeLists.txt
exercises/chapter1/: CMakeLists.txt
exercises/chapter1/ex1-2-3/: CMakeLists.txt  main.cpp
exercises/chapter1/ex1-2-4/: CMakeLists.txt  main.cpp
exercises/chapter1/ex1-3-2/: CMakeLists.txt  main.cpp
exercises/chapter1/ex1-4-2/: CMakeLists.txt  main.cpp
exercises/chapter1/ex1-4-3/: CMakeLists.txt  main.cpp
include/: Complex.hpp  Fraction.hpp  Matrix.hpp  Polynomial.hpp  ProductSpace.hpp  Real.hpp  Vector.hpp  Z_p.hpp
lib/: CMakeLists.txt  utils.cpp  utils.hpp
lib/fields/: CMakeLists.txt  Complex.cpp  Fraction.cpp  Real.cpp  Z_p.cpp
notes/chapter1/: chapter1.tex
test/: CMakeLists.txt  MatrixTest.cpp  PolynomialTest.cpp  ProductSpaceTest.cpp  VectorTest.cpp
test/fields/: CMakeLists.txt  ComplexTest.cpp  FractionTest.cpp  RealTest.cpp  Z_pTest.cpp
